--- a/_publications/2023/tgrs2021.md
+++ b/_publications/2023/tgrs2021.md
@@ -5,6 +5,7 @@ selected:       true
 pub:            "IEEE Transactions on Geoscience and Remote Sensing (TGRS)"
 pub_date:       "2021"
 pub_last:       ' <span class="badge badge-pill badge-publication badge-success">ESI Highly Cited Paper (Top 1%)</span>'
+semantic_scholar_id: e6ec1a21f055fd0fac9c35c0c63ff1e9edfa3655  # use this to retrieve citation count
 abstract: >-
   We propose a scribble-based weakly supervised road surface extraction method named ScRoadExtractor, which learns from easily accessible scribbles such as centerlines instead of densely annotated road surface ground truths. The results demonstrate that ScRoadExtractor exceeds the classic scribble-supervised segmentation method by 20% for the intersection over union (IoU) indicator and outperforms the state-of-the-art scribble-based weakly supervised methods at least 4%.
 cover:          /assets/images/covers/tgrs2021.png
