Update abstract in tgrs2020.md for clarity
Revised the abstract for clarity and conciseness.

--- a/_publications/2023/tgrs2020.md
+++ b/_publications/2023/tgrs2020.md
@@ -6,7 +6,7 @@ pub:            "IEEE Transactions on Geoscience and Remote Sensing (TGRS)"
 pub_date:       "2020"
 semantic_scholar_id: 2b2732e9c67e5739e3820d3ffdcbeb41b29b464b  # use this to retrieve citation count
 abstract: >-
-  To address the problems of previous road extraction methods, especially road connectivity and completeness, we introduce a novel deep learning-based multistage framework to accurately extract the road surface and road centerline simultaneously. Our framework consists of three steps: boosting segmentation, multiple starting points tracing, and fusion. We evaluated our method utilizing three data sets covering various road situations in more than 40 cities around the world. The results demonstrate the superior performance of our proposed framework. Specifically, our method’s performance exceeded the other methods by 7% and 40% for the connectivity indicator for road surface segmentation and for the completeness indicator for centerline extraction, respectively.
+  This article introduces a novel deep learning-based multistage framework to accurately extract the road surface and road centerline simultaneously and demonstrates the superior performance of the proposed framework. Specifically, our method’s performance exceeded the other methods by 7% and 40% for the connectivity indicator for road surface segmentation and for the completeness indicator for centerline extraction, respectively.
 
 cover:          /assets/images/covers/tgrs2020.png
 authors:
