--- a/_publications/2024/bmvc2022.md
+++ b/_publications/2024/bmvc2022.md
@@ -5,7 +5,7 @@ selected:       true
 pub:            "British Machine Vision Conference (BMVC)"
 # pub_pre:        "Submitted to "
 # pub_post:       'Under review.'
-# pub_last:       ' <span class="badge badge-pill badge-publication badge-success">Spotlight</span>'
+pub_last:       ' <span class="badge badge-pill badge-publication badge-success">Poster</span>'
 pub_date:       "2022"
 semantic_scholar_id: 353db89211fc597629d2bc0832993a020692cfd9  # use this to retrieve citation count
 abstract: >-
