--- a/_publications/2024/bmvc2022.md
+++ b/_publications/2024/bmvc2022.md
@@ -1,7 +1,7 @@
 ---
 title:          "Flow-based GAN for 3D Point Cloud Generation from a Single Image"
 date:           2022-10-08 00:01:00 +0800
-selected:       true
+selected:       false
 pub:            "British Machine Vision Conference (BMVC)"
 # pub_pre:        "Submitted to "
 # pub_post:       'Under review.'
