--- a/_publications/2023/tgrs2022.md
+++ b/_publications/2023/tgrs2022.md
@@ -10,7 +10,7 @@ pub_date:       "2022"
 semantic_scholar_id: 82171f40f00b8a328c75199fba375301092d2437 # use this to retrieve citation count
 abstract: >-
   The proposed method comprehensively outperforms the recent CNN-based segmentation methods and other regularization methods in the intersection over union (IoU) and smoothness score, and a visual check shows that a majority of the prediction results of the proposed method approach the human delineation level.
-# cover:          /assets/images/covers/cover3.jpg
+cover:          /assets/images/covers/tgrs2022.jpg
 authors:
   - Jingjing Yan
   - Shunping Ji
